deploy: dfcbf1a71346b4941ba3aff7af2a6235d7bd9b54

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -68,17 +68,12 @@
            <div itemprop="articleBody">
              
   <h1>All modules for which code is available</h1>
-<ul><li><a href="evmspec/block.html">evmspec.block</a></li>
-<li><a href="evmspec/data.html">evmspec.data</a></li>
-<li><a href="evmspec/header.html">evmspec.header</a></li>
-<li><a href="evmspec/log.html">evmspec.log</a></li>
-<li><a href="evmspec/receipt.html">evmspec.receipt</a></li>
-<li><a href="evmspec/trace/call.html">evmspec.trace.call</a></li>
-<li><a href="evmspec/trace/create.html">evmspec.trace.create</a></li>
-<li><a href="evmspec/trace/reward.html">evmspec.trace.reward</a></li>
-<li><a href="evmspec/trace/suicide.html">evmspec.trace.suicide</a></li>
+<ul><li><a href="evmspec/data/main.html">evmspec.data.main</a></li>
+<li><a href="evmspec/data/uints.html">evmspec.data.uints</a></li>
+<li><a href="evmspec/structs/header.html">evmspec.structs.header</a></li>
+<li><a href="evmspec/structs/log.html">evmspec.structs.log</a></li>
+<li><a href="evmspec/structs/receipt.html">evmspec.structs.receipt</a></li>
 <li><a href="evmspec/transaction.html">evmspec.transaction</a></li>
-<li><a href="evmspec/uints.html">evmspec.uints</a></li>
 </ul>
 
            </div>
