--- a/_modules/evmspec/transaction.html
+++ b/_modules/evmspec/transaction.html
@@ -77,16 +77,7 @@
 <span class="kn">from</span> <span class="nn">msgspec</span> <span class="kn">import</span> <span class="n">UNSET</span><span class="p">,</span> <span class="n">Raw</span><span class="p">,</span> <span class="n">field</span><span class="p">,</span> <span class="n">json</span>
 
 <span class="kn">from</span> <span class="nn">evmspec._ids</span> <span class="kn">import</span> <span class="n">ChainId</span><span class="p">,</span> <span class="n">TransactionIndex</span>
-<span class="kn">from</span> <span class="nn">evmspec.data</span> <span class="kn">import</span> <span class="p">(</span>
-    <span class="n">Address</span><span class="p">,</span>
-    <span class="n">BlockHash</span><span class="p">,</span>
-    <span class="n">BlockNumber</span><span class="p">,</span>
-    <span class="n">HexBytes32</span><span class="p">,</span>
-    <span class="n">Nonce</span><span class="p">,</span>
-    <span class="n">TransactionHash</span><span class="p">,</span>
-    <span class="n">Wei</span><span class="p">,</span>
-    <span class="n">uint</span><span class="p">,</span>
-<span class="p">)</span>
+<span class="kn">from</span> <span class="nn">evmspec.data</span> <span class="kn">import</span> <span class="o">*</span>
 
 
 <div class="viewcode-block" id="AccessListEntry"><a class="viewcode-back" href="../../source/evmspec.html#evmspec.transaction.AccessListEntry">[docs]</a><span class="k">class</span> <span class="nc">AccessListEntry</span><span class="p">(</span><span class="n">LazyDictStruct</span><span class="p">,</span> <span class="n">frozen</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">forbid_unknown_fields</span><span class="o">=</span><span class="kc">True</span><span class="p">):</span>  <span class="c1"># type: ignore [call-arg]</span>
