deploy: 3449c7ed9acd33b0e4985c63f745311e8c2b1d17

--- a/_modules/evmspec/data/uints.html
+++ b/_modules/evmspec/data/uints.html
@@ -93,6 +93,11 @@
 <span class="sd">    This class provides a framework to define unsigned integer types of any byte size,</span>
 <span class="sd">    ensuring values adhere to defined minimum and maximum constraints.</span>
 
+<span class="sd">    Note:</span>
+<span class="sd">        Classes for the following byte sizes are explicitly defined: :class:`uint8`, :class:`uint64`,</span>
+<span class="sd">        :class:`uint128`, and :class:`uint256`. For other byte sizes from 2 to 31, excluding those</span>
+<span class="sd">        explicitly defined, classes are dynamically generated.</span>
+
 <span class="sd">    See Also:</span>
 <span class="sd">        :class:`uint8`, :class:`uint64`, :class:`uint128`, :class:`uint256`</span>
 <span class="sd">    &quot;&quot;&quot;</span>
