--- a/genindex.html
+++ b/genindex.html
@@ -865,7 +865,7 @@
         <li><a href="source/evmspec.data.html#evmspec.data.main.Address.checksum">(evmspec.data.main.Address class method)</a>
 </li>
       </ul></li>
-      <li><a href="source/evmspec.structs.html#evmspec.structs.header.ErigonBlockHeader.coinbase">coinbase (evmspec.structs.header.ErigonBlockHeader attribute)</a>, <a href="source/evmspec.structs.html#id0">[1]</a>
+      <li><a href="source/evmspec.structs.html#evmspec.structs.header.ErigonBlockHeader.coinbase">coinbase (evmspec.structs.header.ErigonBlockHeader attribute)</a>
 </li>
       <li><a href="source/evmspec.data.html#evmspec.data.BlockNumber.conjugate">conjugate() (evmspec.data.BlockNumber method)</a>
 
@@ -1113,7 +1113,7 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="source/evmspec.structs.html#evmspec.structs.header.ErigonBlockHeader.difficulty">difficulty (evmspec.structs.header.ErigonBlockHeader attribute)</a>, <a href="source/evmspec.structs.html#id1">[1]</a>
+      <li><a href="source/evmspec.structs.html#evmspec.structs.header.ErigonBlockHeader.difficulty">difficulty (evmspec.structs.header.ErigonBlockHeader attribute)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -1236,7 +1236,7 @@
 <h2 id="F">F</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="source/evmspec.structs.html#evmspec.structs.receipt.Status.failure">failure (evmspec.structs.receipt.Status attribute)</a>, <a href="source/evmspec.structs.html#id6">[1]</a>
+      <li><a href="source/evmspec.structs.html#evmspec.structs.receipt.Status.failure">failure (evmspec.structs.receipt.Status attribute)</a>, <a href="source/evmspec.structs.html#id0">[1]</a>
 </li>
       <li><a href="source/evmspec.structs.html#evmspec.structs.receipt.FeeStats">FeeStats (class in evmspec.structs.receipt)</a>
 </li>
@@ -2427,7 +2427,7 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/evmspec.structs.html#evmspec.structs.receipt.ArbitrumFeeStats.paid">paid (evmspec.structs.receipt.ArbitrumFeeStats attribute)</a>
 </li>
-      <li><a href="source/evmspec.structs.html#evmspec.structs.header.ErigonBlockHeader.parentHash">parentHash (evmspec.structs.header.ErigonBlockHeader attribute)</a>, <a href="source/evmspec.structs.html#id2">[1]</a>
+      <li><a href="source/evmspec.structs.html#evmspec.structs.header.ErigonBlockHeader.parentHash">parentHash (evmspec.structs.header.ErigonBlockHeader attribute)</a>
 </li>
       <li><a href="source/evmspec.data.html#evmspec.data.Address.partition">partition() (evmspec.data.Address method)</a>
 
@@ -2695,7 +2695,7 @@
         <li><a href="source/evmspec.structs.html#evmspec.structs.log.Topic.rjust">(evmspec.structs.log.Topic method)</a>
 </li>
       </ul></li>
-      <li><a href="source/evmspec.structs.html#evmspec.structs.header.ErigonBlockHeader.root">root (evmspec.structs.header.ErigonBlockHeader attribute)</a>, <a href="source/evmspec.structs.html#id3">[1]</a>
+      <li><a href="source/evmspec.structs.html#evmspec.structs.header.ErigonBlockHeader.root">root (evmspec.structs.header.ErigonBlockHeader attribute)</a>
 </li>
       <li><a href="source/evmspec.data.html#evmspec.data.Address.rpartition">rpartition() (evmspec.data.Address method)</a>
 
@@ -2897,7 +2897,7 @@
         <li><a href="source/evmspec.structs.html#evmspec.structs.log.Topic.strip">(evmspec.structs.log.Topic method)</a>
 </li>
       </ul></li>
-      <li><a href="source/evmspec.structs.html#evmspec.structs.receipt.Status.success">success (evmspec.structs.receipt.Status attribute)</a>, <a href="source/evmspec.structs.html#id7">[1]</a>
+      <li><a href="source/evmspec.structs.html#evmspec.structs.receipt.Status.success">success (evmspec.structs.receipt.Status attribute)</a>, <a href="source/evmspec.structs.html#id1">[1]</a>
 </li>
       <li><a href="source/evmspec.data.html#evmspec.data.Address.swapcase">swapcase() (evmspec.data.Address method)</a>
 
@@ -2927,7 +2927,7 @@
 <h2 id="T">T</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="source/evmspec.structs.html#evmspec.structs.header.ErigonBlockHeader.timestamp">timestamp (evmspec.structs.header.ErigonBlockHeader attribute)</a>, <a href="source/evmspec.structs.html#id4">[1]</a>
+      <li><a href="source/evmspec.structs.html#evmspec.structs.header.ErigonBlockHeader.timestamp">timestamp (evmspec.structs.header.ErigonBlockHeader attribute)</a>
 </li>
       <li><a href="source/evmspec.structs.html#evmspec.structs.log.TinyLog">TinyLog (class in evmspec.structs.log)</a>
 </li>
@@ -3273,7 +3273,7 @@
 </li>
       <li><a href="source/evmspec.data.html#evmspec.data.uints.uint96">uint96 (class in evmspec.data.uints)</a>
 </li>
-      <li><a href="source/evmspec.structs.html#evmspec.structs.header.ErigonBlockHeader.uncleHash">uncleHash (evmspec.structs.header.ErigonBlockHeader attribute)</a>, <a href="source/evmspec.structs.html#id5">[1]</a>
+      <li><a href="source/evmspec.structs.html#evmspec.structs.header.ErigonBlockHeader.uncleHash">uncleHash (evmspec.structs.header.ErigonBlockHeader attribute)</a>
 </li>
       <li><a href="source/evmspec.structs.html#evmspec.structs.receipt.ArbitrumFeeStats.unitsUsed">unitsUsed (evmspec.structs.receipt.ArbitrumFeeStats attribute)</a>
 </li>
