--- a/_modules/index.html
+++ b/_modules/index.html
@@ -68,12 +68,18 @@
            <div itemprop="articleBody">
              
   <h1>All modules for which code is available</h1>
-<ul><li><a href="evmspec/data/main.html">evmspec.data.main</a></li>
+<ul><li><a href="evmspec/data/_ids.html">evmspec.data._ids</a></li>
+<li><a href="evmspec/data/_main.html">evmspec.data._main</a></li>
 <li><a href="evmspec/data/uints.html">evmspec.data.uints</a></li>
+<li><a href="evmspec/structs/block.html">evmspec.structs.block</a></li>
 <li><a href="evmspec/structs/header.html">evmspec.structs.header</a></li>
 <li><a href="evmspec/structs/log.html">evmspec.structs.log</a></li>
 <li><a href="evmspec/structs/receipt.html">evmspec.structs.receipt</a></li>
-<li><a href="evmspec/transaction.html">evmspec.transaction</a></li>
+<li><a href="evmspec/structs/trace/call.html">evmspec.structs.trace.call</a></li>
+<li><a href="evmspec/structs/trace/create.html">evmspec.structs.trace.create</a></li>
+<li><a href="evmspec/structs/trace/reward.html">evmspec.structs.trace.reward</a></li>
+<li><a href="evmspec/structs/trace/suicide.html">evmspec.structs.trace.suicide</a></li>
+<li><a href="evmspec/structs/transaction.html">evmspec.structs.transaction</a></li>
 </ul>
 
            </div>
