--- a/_modules/evmspec/data/uints.html
+++ b/_modules/evmspec/data/uints.html
@@ -83,7 +83,7 @@
 
 <span class="kn">from</span> <span class="nn">hexbytes</span> <span class="kn">import</span> <span class="n">HexBytes</span>
 
-<span class="kn">from</span> <span class="nn">evmspec.data.main</span> <span class="kn">import</span> <span class="n">uint</span>
+<span class="kn">from</span> <span class="nn">evmspec.data._main</span> <span class="kn">import</span> <span class="n">uint</span>
 
 
 <span class="k">class</span> <span class="nc">_UintData</span><span class="p">(</span><span class="n">uint</span><span class="p">):</span>
